--- a/.cproject
+++ b/.cproject
@@ -3,7 +3,16 @@
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="cdt.managedbuild.toolchain.gnu.cross.base.1815250507">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.toolchain.gnu.cross.base.1815250507" moduleId="org.eclipse.cdt.core.settings" name="Default">
-				<externalSettings/>
+				<macros>
+					<stringMacro name="RM" type="VALUE_TEXT" value="rm"/>
+				</macros>
+				<externalSettings>
+					<externalSetting>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="includePath" name="/circus"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="libraryPath" name="/circus/Default"/>
+						<entry flags="RESOLVED" kind="libraryFile" name="circus" srcPrefixMapping="" srcRootPath=""/>
+					</externalSetting>
+				</externalSettings>
 				<extensions>
 					<extension id="org.eclipse.cdt.core.PE" point="org.eclipse.cdt.core.BinaryParser"/>
 					<extension id="org.eclipse.cdt.core.GCCErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
@@ -14,11 +23,11 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="circus" buildProperties="" description="" id="cdt.managedbuild.toolchain.gnu.cross.base.1815250507" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
+				<configuration artifactExtension="dll" artifactName="circus" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.sharedLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.sharedLib" description="" id="cdt.managedbuild.toolchain.gnu.cross.base.1815250507" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
 					<folderInfo id="cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726" name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.mingw.base.1276948589" name="MinGW GCC" superClass="cdt.managedbuild.toolchain.gnu.mingw.base">
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.PE" id="cdt.managedbuild.target.gnu.platform.mingw.base.624944291" name="Debug Platform" osList="win32" superClass="cdt.managedbuild.target.gnu.platform.mingw.base"/>
-							<builder buildPath="${workspace_loc:/circus}/Default" id="cdt.managedbuild.builder.gnu.cross.579861863" keepEnvironmentInBuildfile="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
+							<builder buildPath="${workspace_loc:/circus}/Default" command="make" id="cdt.managedbuild.builder.gnu.cross.579861863" incrementalBuildTarget="all" keepEnvironmentInBuildfile="false" name="Gnu Make Builder" superClass="cdt.managedbuild.builder.gnu.cross"/>
 							<tool id="cdt.managedbuild.tool.gnu.assembler.mingw.base.1801970645" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.mingw.base">
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1013826061" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -32,13 +41,23 @@
 							</tool>
 							<tool command="mingw32-gcc" id="cdt.managedbuild.tool.gnu.c.compiler.mingw.base.373543663" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.base">
 								<option id="gnu.c.compiler.option.dialect.std.1130488523" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" value="gnu.c.compiler.dialect.default" valueType="enumerated"/>
+								<option id="gnu.c.compiler.option.misc.other.1077085283" name="Other flags" superClass="gnu.c.compiler.option.misc.other" value="-c -fmessage-length=0 -march=native" valueType="string"/>
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1260476199" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="CIRCUS_DLL_EXPORT"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.798374449" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
-							<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.base.2079753843" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.base"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.linker.mingw.base.2079753843" name="MinGW C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.mingw.base">
+								<option defaultValue="true" id="gnu.c.link.option.shared.1197037186" name="Shared (-shared)" superClass="gnu.c.link.option.shared" valueType="boolean"/>
+							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.mingw.base.1616355698" name="MinGW C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.mingw.base">
 								<option id="gnu.cpp.link.option.libs.1473342486" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="pthread"/>
 								</option>
+								<option id="gnu.cpp.link.option.shared.939034148" name="Shared (-shared)" superClass="gnu.cpp.link.option.shared" value="true" valueType="boolean"/>
+								<option id="gnu.cpp.link.option.soname.1823167097" name="Shared object name (-Wl,-soname=)" superClass="gnu.cpp.link.option.soname" value="libcircus.dll" valueType="string"/>
+								<option id="gnu.cpp.link.option.implname.1739412757" name="Import Library name (-Wl,--out-implib=)" superClass="gnu.cpp.link.option.implname" value="libcircus.a" valueType="string"/>
+								<option id="gnu.cpp.link.option.defname.911351127" name="DEF file name (-Wl,--output-def=)" superClass="gnu.cpp.link.option.defname" value="libcircus.def" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.214274859" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -66,27 +85,6 @@
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
-	<storageModule moduleId="scannerConfiguration">
-		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.cpp.compiler.1901682260;cdt.managedbuild.tool.gnu.cpp.compiler.input.52583420">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.cpp.compiler.418685789;cdt.managedbuild.tool.gnu.cpp.compiler.input.94803086">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.c.compiler.1283457802;cdt.managedbuild.tool.gnu.c.compiler.input.1058802889">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.c.compiler.mingw.base.1993994841;cdt.managedbuild.tool.gnu.c.compiler.input.325046564">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.c.compiler.1412663514;cdt.managedbuild.tool.gnu.c.compiler.input.1858721774">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
-		</scannerConfigBuildInfo>
-		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.16935506;cdt.managedbuild.tool.gnu.cpp.compiler.input.634191777">
-			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
-		</scannerConfigBuildInfo>
-	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets">
 		<buildTargets>
 			<target name="default" path="core" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
@@ -98,5 +96,32 @@
 				<runAllBuilders>true</runAllBuilders>
 			</target>
 		</buildTargets>
+	</storageModule>
+	<storageModule moduleId="scannerConfiguration">
+		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.cpp.compiler.1901682260;cdt.managedbuild.tool.gnu.cpp.compiler.input.52583420">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.c.compiler.mingw.base.373543663;cdt.managedbuild.tool.gnu.c.compiler.input.798374449">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.cpp.compiler.418685789;cdt.managedbuild.tool.gnu.cpp.compiler.input.94803086">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileCPP"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.c.compiler.mingw.base.1993994841;cdt.managedbuild.tool.gnu.c.compiler.input.325046564">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.277381586;cdt.managedbuild.tool.gnu.cpp.compiler.input.1021405274">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.16935506;cdt.managedbuild.tool.gnu.cpp.compiler.input.634191777">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.c.compiler.1412663514;cdt.managedbuild.tool.gnu.c.compiler.input.1858721774">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
+		</scannerConfigBuildInfo>
+		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.cross.base.1815250507;cdt.managedbuild.toolchain.gnu.cross.base.1815250507.140000726;cdt.managedbuild.tool.gnu.cross.c.compiler.1283457802;cdt.managedbuild.tool.gnu.c.compiler.input.1058802889">
+			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
+		</scannerConfigBuildInfo>
 	</storageModule>
 </cproject>
